started css display property section

--- a/classproject/000courseCompilation/index.html
+++ b/classproject/000courseCompilation/index.html
@@ -222,6 +222,6 @@
         <footer>
             <p>Return to <a href="../index.html"><strong>main page</strong></a></p>
         </footer>
-        <script src="scripts.js"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
