--- a/classproject/003CSS-mysite/index.html
+++ b/classproject/003CSS-mysite/index.html
@@ -14,6 +14,8 @@
         <!-- <img src="images/circleme.png" alt="Steven McIntyre image"> -->
         <h1>Steven McIntyre</h1>
         <p>A front end web developer and <span class="pro">pro</span>grammer.</p>
+        <p class="b a">Hello</p>
+        <p class="a">World</p>
         <img src="images/cloud.png" alt="cloud-image">
         <img src="images/mountain.png" alt="mountain-image">
     </div>
