absolute positioning practice

--- a/classproject/003CSS-mysite/index.html
+++ b/classproject/003CSS-mysite/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steven McIntyre</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
-</head>
-<body>
-    <div class="introduction">
-        <img src="images/cloud.png" alt="cloud-image">
-        <!-- <img src="images/circleme.png" alt="Steven McIntyre image"> -->
-        <h1>Steven McIntyre</h1>
-        <p>A front end web developer and <span class="pro">pro</span>grammer.</p>
-        <p class="b a">Hello</p>
-        <p class="a">World</p>
-        <img src="images/cloud.png" alt="cloud-image">
-        <img src="images/mountain.png" alt="mountain-image">
-    </div>
-    <div class="middle-container"></div>
-    <div class="bottom-container"></div>
-    <div class="bottomest-container"></div>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Steven McIntyre</title>
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+    </head>
+    <body>
+        <div class="introduction">
+            <img src="images/cloud.png" alt="cloud-image" class="top-cloud">
+            <!-- <img src="images/circleme.png" alt="Steven McIntyre image"> -->
+            <h1 class="name">Steven McIntyre</h1>
+            <p class="top">A front end web developer and <span class="pro">pro</span>grammer.</p>
+            <img src="images/cloud.png" alt="cloud-image" class="bottom-cloud">
+            <img src="images/mountain.png" alt="mountain-image">
+        </div>
+        <div class="middle-container"></div>
+        <div class="bottom-container"></div>
+        <!-- <p class="i">This is an inline element</p>
+        <p class="i">This is an inline element</p>
+        <p class="i">This is an inline element</p>
+        <p class="ib">This is an inline block element</p>
+        <p class="ib">This is an inline block element</p>
+        <p class="ib">This is an inline block element</p>
+        <p class="b">This is a block element</p>
+        <p class="b">This is a block element</p>
+        <p class="b">This is a block element</p> -->
+    </body>
 </html>
