finished inputting stub code and added some flavour

--- a/classproject/003CSS-mysite/index.html
+++ b/classproject/003CSS-mysite/index.html
@@ -7,6 +7,9 @@
         <title>Steven McIntyre</title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sacramento&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <div class="introduction">
@@ -17,8 +20,49 @@
             <img src="images/cloud.png" alt="cloud-image" class="bottom-cloud">
             <img src="images/mountain.png" alt="mountain-image">
         </div>
-        <div class="middle-container"></div>
-        <div class="bottom-container"></div>
+        <div class="middle-container">
+            <div class="profile">
+                <img src="../imgs/circleme.png" alt="picture-me" class="profile-pic">
+                <h2>Hello.</h2>
+                <p> I am a student of <em>web developement</em>. I love coding, spending time with friends, riding motorcycles, and studying philosophy. 
+            </div>
+            <hr>
+            <div class="skills">
+                <h2>My Skills.</h2>
+                <div class="main-row">
+                    <img class="napoleon-dancing" src="https://media.giphy.com/media/DfSLII45H40RW/giphy.gif" alt="napoleon-dancing">
+                </div>
+                <div class="skill-row">
+                    <h3>Coding</h3>
+                    <img class="" src="https://media.giphy.com/media/LQiq27myXGPXO6WzAE/giphy.gif" alt="matrix-gif">
+                    <p>I have basic HTML, CSS, and Javascript coding skills and am constantly working to increase my knowlege and ability in this area.</p>
+                </div>
+                <div class="skill-row">
+                    <img src="https://media.giphy.com/media/I1SLS2om702u4/giphy.gif" alt="funny-guitar">
+                    <h3>Guitar</h3>
+                    <p>I play acoustic and electric guitar in a range of different styles, though I usually prefer blues.</p>
+                </div>
+                <div class="skill-row">
+                    <img src="https://media.giphy.com/media/cfuL5gqFDreXxkWQ4o/giphy.gif" alt="motorcycle-riding-cat">
+                    <h3>Motorcycles</h3>
+                    <p>I enjoy riding motorcycles and using them to explore my beautiful province of British Columbia Canada.</p>
+                </div>
+
+            </div>
+            <hr>
+            <div class="contact-me">
+                <h2>Get In Touch</h2>
+                <h3>If you would like to get in touch, please do!</h3>
+                <p>If you are interested in a service, or just want to say hi, you can reach me at the links below.</p>
+                <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+            </div>
+        </div>
+        <div class="bottom-container">
+            <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+            <a class="footer-link" href="https://twitter.com/">Twitter</a>
+            <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+            <p>© 2018 Name Surname.</p>
+        </div>
         <!-- <p class="i">This is an inline element</p>
         <p class="i">This is an inline element</p>
         <p class="i">This is an inline element</p>
