using rem em percentage and px to determine font size

--- a/classproject/003CSS-mysite/index.html
+++ b/classproject/003CSS-mysite/index.html
@@ -16,7 +16,7 @@
             <img src="images/cloud.png" alt="cloud-image" class="top-cloud">
             <!-- <img src="images/circleme.png" alt="Steven McIntyre image"> -->
             <h1 class="name">Steven McIntyre</h1>
-            <p class="top">A front end web developer and <span class="pro">pro</span>grammer.</p>
+            <h3 class="top intro">Front end web developer and <span class="pro">pro</span>grammer.</h3>
             <img src="images/cloud.png" alt="cloud-image" class="bottom-cloud">
             <img src="images/mountain.png" alt="mountain-image">
         </div>
