--- a/classproject/003CSS-mysite/index.html
+++ b/classproject/003CSS-mysite/index.html
@@ -16,7 +16,7 @@
             <img src="images/cloud.png" alt="cloud-image" class="top-cloud">
             <!-- <img src="images/circleme.png" alt="Steven McIntyre image"> -->
             <h1 class="name">Steven McIntyre</h1>
-            <h3 class="top intro">Front end web developer and <span class="pro">pro</span>grammer.</h3>
+            <h3 class="top intro">Web Developer, <span class="pro">Pro</span>grammer, Man of mystery.</h3>
             <img src="images/cloud.png" alt="cloud-image" class="bottom-cloud">
             <img src="images/mountain.png" alt="mountain-image">
         </div>
@@ -61,7 +61,7 @@
             <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
             <a class="footer-link" href="https://twitter.com/">Twitter</a>
             <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-            <p>© 2018 Name Surname.</p>
+            <p>© 2018 Steven McIntyre.</p>
         </div>
         <!-- <p class="i">This is an inline element</p>
         <p class="i">This is an inline element</p>
