started new maintenance page for motorcycle

--- a/classproject/003CSS-mysite/index.html
+++ b/classproject/003CSS-mysite/index.html
@@ -20,32 +20,37 @@
             <img src="images/cloud.png" alt="cloud-image" class="bottom-cloud">
             <img src="images/mountain.png" alt="mountain-image">
         </div>
+
         <div class="middle-container">
             <div class="profile">
                 <img src="../imgs/circleme.png" alt="picture-me" class="profile-pic">
-                <h2>Hello.</h2>
+                <h3>Hello.</h2>
                 <p> I am a student of <em>web developement</em>. I love coding, spending time with friends, riding motorcycles, and studying philosophy. 
             </div>
             <hr>
             <div class="skills">
                 <h2>My Skills.</h2>
-                <div class="main-row">
+                <div class="main-row skill-row">
                     <img class="napoleon-dancing" src="https://media.giphy.com/media/DfSLII45H40RW/giphy.gif" alt="napoleon-dancing">
                 </div>
+                <hr>
                 <div class="skill-row">
                     <h3>Coding</h3>
                     <img class="" src="https://media.giphy.com/media/LQiq27myXGPXO6WzAE/giphy.gif" alt="matrix-gif">
                     <p>I have basic HTML, CSS, and Javascript coding skills and am constantly working to increase my knowlege and ability in this area.</p>
                 </div>
+                <hr>
                 <div class="skill-row">
-                    <img src="https://media.giphy.com/media/I1SLS2om702u4/giphy.gif" alt="funny-guitar">
                     <h3>Guitar</h3>
+                    <img src="https://media.giphy.com/media/I1SLS2om702u4/giphy.gif" alt="funny-guitar">
                     <p>I play acoustic and electric guitar in a range of different styles, though I usually prefer blues.</p>
                 </div>
+                <hr>
                 <div class="skill-row">
-                    <img src="https://media.giphy.com/media/cfuL5gqFDreXxkWQ4o/giphy.gif" alt="motorcycle-riding-cat">
                     <h3>Motorcycles</h3>
+                    <img src="https://media.giphy.com/media/cfuL5gqFDreXxkWQ4o/giphy.gif" alt="motorcycle-riding-cat">
                     <p>I enjoy riding motorcycles and using them to explore my beautiful province of British Columbia Canada.</p>
+                    <p>I even made a website dedicated to the care and maintenance of my new-old motorcycle the GSF(Bandit)250. <a href="../004bandit/index.html" target="blank_">Bandit 250 Website</a></p>
                 </div>
 
             </div>
