--- a/classproject/004bandit/index.html
+++ b/classproject/004bandit/index.html
@@ -15,17 +15,25 @@
         <nav>
             <h3>Navigation</h3>
             <ul>
-                <li>job</li>
-                <li>job</li>
-                <li>job</li>
+                <li><h4><a href="disposables.html">Disposables</a></h4></li>
+                <li>
+                    <a href="clearance check">Valve Clearance Check</a>
+                    <ul>
+                        <li><a href="oilchange.html">Oil Change</a></li>
+                        <li><a href="coolantchange.html">Coolant Change</a></li>
+                        <li><a href="airfilterchange">Air Filter Change</a></li>
+                        <li><a href="checkvalveclearance.html">Check Valve Clearances</a></li>
+                    </ul>
+                </li>
                 <li>job</li>
                 <li>job</li>
                 <li>job</li>
             </ul>
         </nav>
         <section>
-            <h2>Selected Job Name</h2>
-            <p>Job information</p>
+            <h2>Start Here!</h2>
+            <p><em>START</em> every job at the link titled 'Disposables'. This section is organized by job, and lists every part you need ahead of time in order to complete it.</p>
+            <p><em>NEXT</em> find the job you are looking for in the nav bar. If there are other jobs that are recomended, or convenient to do at the same time, they will be listed below the job.</p>
             <a href="#">Relevant Link</a>
         </section>
         stuff
