--- a/classproject/003CSS-mysite/index.html
+++ b/classproject/003CSS-mysite/index.html
@@ -30,26 +30,28 @@
             <hr>
             <div class="skills">
                 <h2>My Skills.</h2>
+
                 <div class="main-row skill-row">
                     <img class="napoleon-dancing" src="https://media.giphy.com/media/DfSLII45H40RW/giphy.gif" alt="napoleon-dancing">
                 </div>
-                <hr>
+
                 <div class="skill-row">
+                    <img class="codingimg" src="https://media.giphy.com/media/LQiq27myXGPXO6WzAE/giphy.gif" alt="matrix-gif">
                     <h3>Coding</h3>
-                    <img class="" src="https://media.giphy.com/media/LQiq27myXGPXO6WzAE/giphy.gif" alt="matrix-gif">
-                    <p>I have basic HTML, CSS, and Javascript coding skills and am constantly working to increase my knowlege and ability in this area.</p>
+                    <p>Basic HTML, CSS, and Javascript.</p>
                 </div>
-                <hr>
+
                 <div class="skill-row">
+                    <img class="guitarimg" src="https://media.giphy.com/media/I1SLS2om702u4/giphy.gif" alt="funny-guitar">
                     <h3>Guitar</h3>
-                    <img src="https://media.giphy.com/media/I1SLS2om702u4/giphy.gif" alt="funny-guitar">
-                    <p>I play acoustic and electric guitar in a range of different styles, though I usually prefer blues.</p>
+                    <p class="guitarstuff">I play acoustic and electric guitar in a range of different styles, though I usually prefer blues.</p>
                 </div>
-                <hr>
+
                 <div class="skill-row">
+                    <img class="motorcycleimg" src="https://media.giphy.com/media/cfuL5gqFDreXxkWQ4o/giphy.gif" alt="motorcycle-riding-cat">
                     <h3>Motorcycles</h3>
-                    <img src="https://media.giphy.com/media/cfuL5gqFDreXxkWQ4o/giphy.gif" alt="motorcycle-riding-cat">
                     <p>I enjoy riding motorcycles and using them to explore my beautiful province of British Columbia Canada.</p>
+                    <hr>
                     <p>I even made a website dedicated to the care and maintenance of my new-old motorcycle the GSF(Bandit)250. <a href="../004bandit/index.html" target="blank_">Bandit 250 Website</a></p>
                 </div>
 
@@ -59,14 +61,14 @@
                 <h2>Get In Touch</h2>
                 <h3>If you would like to get in touch, please do!</h3>
                 <p>If you are interested in a service, or just want to say hi, you can reach me at the links below.</p>
-                <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+                <a class="BUTTON_IGK" href="mailto:name@email.com">CONTACT ME</a>
             </div>
         </div>
         <div class="bottom-container">
             <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
             <a class="footer-link" href="https://twitter.com/">Twitter</a>
             <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-            <p>© 2018 Steven McIntyre.</p>
+            <p class="copyright">© 2018 Steven McIntyre.</p>
         </div>
         <!-- <p class="i">This is an inline element</p>
         <p class="i">This is an inline element</p>
