--- a/classproject/004bandit/index.html
+++ b/classproject/004bandit/index.html
@@ -1,46 +1,97 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BANDIT 250 MAINTENANCE</title>
-</head>
-<body>
-    <header>
-        <h1>Bandit 250 Maintenance Projects</h1>
-        <p>Colorscheme -> RED accents, SILVER, BLACK, GREY, YELLOW</p>
-    </header>
-    <main>
-        <nav>
-            <h3>Navigation</h3>
-            <ul>
-                <li><h4><a href="disposables.html">Disposables</a></h4></li>
-                <li>
-                    <a href="clearance check">Valve Clearance Check</a>
-                    <ul>
-                        <li><a href="oilchange.html">Oil Change</a></li>
-                        <li><a href="coolantchange.html">Coolant Change</a></li>
-                        <li><a href="airfilterchange">Air Filter Change</a></li>
-                        <li><a href="checkvalveclearance.html">Check Valve Clearances</a></li>
-                    </ul>
-                </li>
-                <li>job</li>
-                <li>job</li>
-                <li>job</li>
-            </ul>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+        <title>Bandit Maintenance</title>
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="">1990 Bandit 250 Maintenance</a>
+            <div class="collapse navbar-collapse" id="navbarNav"></div>
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="">HOME <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Consumables</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Batched Jobs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Single Jobs</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-        <section>
-            <h2>Start Here!</h2>
-            <p><em>START</em> every job at the link titled 'Disposables'. This section is organized by job, and lists every part you need ahead of time in order to complete it.</p>
-            <p><em>NEXT</em> find the job you are looking for in the nav bar. If there are other jobs that are recomended, or convenient to do at the same time, they will be listed below the job.</p>
-            <a href="#">Relevant Link</a>
-        </section>
-        stuff
-    </main>
-    <footer>
-        stuff
-    </footer>
-    
-</body>
+        <main>
+            <section class="container">
+                <h2>Job Overview</h2>
+
+                <p>There will be a basic overview of the job here</p>
+
+                <hr>
+
+                <ul>
+                    <h5>TOOLS</h5>
+                    <li>A</li>
+                    <li>list</li>
+                    <li>of</li>
+                    <li>which</li>
+                    <li>tools</li>
+                    <li>you'll</li>
+                    <li>need</li>
+                    <li>.</li>
+                </ul>
+                <ul>
+                    <h5>Parts</h5>
+                    <li>A</li>
+                    <li>list</li>
+                    <li>of</li>
+                    <li>which</li>
+                    <li>parts</li>
+                    <li>you'll</li>
+                    <li>need</li>
+                    <li>.</li>
+                </ul>
+            </section>
+            <hr>
+            <section class="container">
+                <h3>The Job</h3>
+                <hr>
+                <h4>Step #</h4>
+                <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+
+                <h4>Step #</h4>
+                <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+
+                <h4>Step #</h4>
+                <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+                
+                <h4>Step #</h4>
+                <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+            </section>
+
+        </main>
+
+
+        <!-- Optional JavaScript; choose one of the two! -->
+
+        <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+        <!-- Option 2: Separate Popper and Bootstrap JS -->
+        <!--
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+        -->
+    </body>
 </html>
