testing bootstrap grid

--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -9,8 +9,18 @@
   </head>
 
   <body>
+    <div class="row red">
+      <div class="col border">col</div>
+      <div class="col border">col</div>
+    </div>
+    <div class="row blue">
+      <div class="col-6 border">col-6</div>
+      <div class="col-1 border">col-1</div>
+      <div class="col-5 border">col-5</div>
+    </div>
 
     <section id="title">
+
       <!-- Nav Bar -->
       
       <nav class="navbar bg-dark navbar-expand-lg navbar-dark">
