--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -5,25 +5,66 @@
     <meta charset="utf-8">
     <title>TinDog</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+    <!-- The two links below are for Montserrat fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,900;1,100;1,400;1,900&display=swap" rel="stylesheet">
+    <!-- The two links above are for Montserrat fonts -->
+
+    <!-- The two links below are for Ubuntu fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <!-- The two links above are for Ubuntu fonts -->
     <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
-    <div class="row red">
-      <div class="col border">col</div>
-      <div class="col border">col</div>
-    </div>
-    <div class="row blue">
-      <div class="col-6 border">col-6</div>
-      <div class="col-1 border">col-1</div>
-      <div class="col-5 border">col-5</div>
+    <!-- <div class="row red">
+      <div class="col border">
+        col
+      </div>
+      <div class="col border">
+        col
+      </div>
     </div>
 
+    <div class="row blue">
+      <div class="col-6 border">
+        col-6
+      </div>
+      <div class="col-6 border">
+        col-6
+      </div>
+    </div>
+
+    <div class="row orange">
+      <div class="col-md-6 border">
+        col-md-6
+      </div>
+      <div class="col-md-6 border">
+        col-md-6
+      </div>
+    </div>
+
+    <div class="row light-gray">
+      <div class="col-lg-3 col-md-4 col-sm-6 border">
+        col-lg-3 col-md-4 col-sm-6
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 border">
+        col-lg-3 col-md-4 col-sm-6
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 border">
+        col-lg-3 col-md-4 col-sm-6
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 border">
+        col-lg-3 col-md-4 col-sm-6
+      </div>
+    </div> -->
     <section id="title">
 
       <!-- Nav Bar -->
       
-      <nav class="navbar bg-dark navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="">Tindog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -44,14 +85,15 @@
       </nav>
 
       <!-- Title -->
-
-      <div>
-        <h1>Meet new and interesting dogs nearby.</h1>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
-      </div>
-      <div>
-        <img src="images/iphone6.png" alt="iphone-mockup">
+      <div class="row">
+        <div class="col-lg-6">
+          <h1>Meet new and interesting dogs nearby.</h1>
+          <button type="button">Download</button>
+          <button type="button">Download</button>
+        </div>
+        <div class="col-lg-6">
+          <img src="images/iphone6.png" alt="iphone-mockup">
+        </div>
       </div>
 
     </section>
